# Detection-and-classification-brake-lights-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  brake_lights_status_classification.cpp
.github/workflows/: build.yml  linter.yml
detection_and_classification_brake_lights/: CMakeLists.txt  brake_lights_classification.cpp  brake_lights_detection.cpp  brake_lights_status_classification.cpp  main.cpp  pugixml.cpp  pugixml.hpp  test_detector.cpp  vcpkg-configuration.json.backup  vcpkg.json.backup  video_processing.cpp
detection_and_classification_brake_lights/Header_files/: brake_lights_classification.h  test_detector.h  video_processing.h
detection_and_classification_brake_lights/include/: brake_lights_classification.h  brake_lights_detection.h  test_detector.h  video_processing.h
